<resources>
    <string name="app_name">DemoFactory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="welcome_demo">Bienvenidos al demo de factory</string>
    <string name="create_sale">Crear recibo</string>
    <string name="create_transmitter">Crear Emisor</string>
    <string name="list_sale">Lista de recibos</string>
    <string name="list_transmitter">Lista de emisores</string>
    <string name="list_clients">Lista de clientes</string>
    <string name="error_insert_client">Ocurrio un problema al almacenar el cliente</string>
    <string name="tittle_client">Cliente</string>
    <string name="accept">Aceptar</string>
    <string name="creating_client">Creando el cliente</string>
    <string name="message_wait_create_client">Un momento por favor se esta creando el cliente...</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellidos</string>
    <string name="identification">Identificación</string>
    <string name="save">Guardar</string>
    <string name="enter_first_name">Ingrese el nombre</string>
    <string name="enter_last_name">Ingrese el apellido</string>
    <string name="enter_identification">Ingrese la cedula</string>
    <string name="load_clients">Cargando los clientes</string>
    <string name="load_list_client">Cargando los clientes</string>
    <string name="empty_list_or_error_client">No se encontraron clientes u ocurrio una excepción</string>
    <string name="you_wan_create_sale">Deseas crear el recibo con este cliente</string>
    <string name="cancel">Cancelar</string>
    <string name="business_name">Razón social del emisor</string>
    <string name="rif_transmitter">RIF Emisor</string>
    <string name="number_rif">Numero de RIF</string>
    <string name="message_wait_create_transmitter">Un momento por favor mientras se crea el emisor</string>
    <string name="enter_business_name">Ingrese la razon social</string>
    <string name="enter_number_business">Ingrese el numero RIF</string>
    <string name="tittle_transmitter">Emisor</string>
    <string name="error_insert_transmitter">Ocurrio un problema al insertar el Emisor</string>
    <string name="load_list_transmitter">Cargando la lista de emisores</string>
    <string name="empty_list_or_error_transmitter">No se encontraron emisores u ocurrio un error</string>
    <string name="you_wan_create_sale_with_transmitter">Deseas crear el recibo con este emisor</string>
    <string name="total">Total:</string>
    <string name="value_total">$0</string>
    <string name="create_product">Crear producto</string>
    <string name="code_produc">Codigo</string>
    <string name="description_product">Descripción</string>
    <string name="price_product">Precio del producto</string>
    <string name="no_enter_code">No ingreso el codigo del producto</string>
    <string name="no_enter_description">No ingreso la descripción</string>
    <string name="value_no_zero">El precio debe ser mayor a 0</string>
    <string name="no_enter_price">No ingreso el precio</string>
    <string name="no_enter_information">No ingreso la informacion</string>
    <string name="message_wait_create_sale">Un momento mientras se crtea el recibo</string>
    <string name="total_zero">El total esta en 0 por favor ingrese cantidades</string>
    <string name="no_insert_product">No se insertaron los productos</string>
    <string name="no_insert_sale">No se creo el recibo</string>
    <string name="client">Cliente:</string>
    <string name="ci">CI:</string>
    <string name="sale">RECIBO DE VENTA</string>
    <string name="code">Codigo:</string>
    <string name="list_sales">Lista de recibos</string>
</resources>