<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:padding="10dp"
    android:weightSum="2"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="0.5"
                android:text="@string/code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/code_product"
                android:layout_weight="1.5"
                android:text="@string/code_produc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:id="@+id/quantity_price"
            android:text="@string/price_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/description_product"
            android:text="@string/description_product"
            android:layout_width="match_parent"
            android:textAllCaps="true"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/total_product"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/price_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>