<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/create_product"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/code_produc"
            android:textColor="@color/purple_500" />

        <EditText
            android:id="@+id/edt_code_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/description_product"
            android:textColor="@color/purple_500" />

        <EditText
            android:id="@+id/edt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/price_product"
            android:textColor="@color/purple_500" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="$"
                android:textColor="@color/purple_500"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_price"
                android:layout_width="0dp"
                android:inputType="numberDecimal"
                android:layout_height="match_parent"
                android:layout_weight="0.8" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:weightSum="2"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/close_dialog"
                android:layout_weight="0.95"
                android:textColor="@color/white"
                android:background="@color/purple_500"
                android:layout_width="0dp"
                android:text="@string/cancel"
                android:layout_height="wrap_content"/>
            <View
                android:layout_weight="0.1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/save_product"
                android:layout_weight="0.95"
                android:text="@string/save"
                android:textColor="@color/white"
                android:background="@color/purple_500"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>