<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".transmitter.TransmitterFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <include
            android:id="@+id/header"
            layout="@layout/header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/business_name"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_business_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLines="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rif_transmitter"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Spinner
                        android:id="@+id/spn_rif"
                        android:layout_weight="0.3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>

                    <EditText
                        android:id="@+id/edt_number_business"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="0.7"
                        android:layout_width="0dp"
                        android:hint="@string/number_rif"
                        android:layout_height="match_parent"
                        android:lines="1"
                        android:inputType="phone"
                        android:maxLines="1" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_save_transmitter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/purple_500"
                    android:text="@string/save"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>